# agda-uhc

./: .gitignore  LICENSE  Makefile  agda-uhc.cabal
src/: Main.hs
src/Agda/Compiler/UHC/: Compiler.hs
test/: Main.hs
test/Compiler/: Tests.hs
test/Compiler/simple/: Floats.out  FloatsOnlyUHC.out  Issue223.hi  Issue223.options  Literals.out  PrimSeq.options
